--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-jwt": "^2.1.0",
     "express-winston": "^0.2.12",
     "jsonwebtoken": "^4.2.2",
+    "less-middleware": "^2.0.1",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
     "passport": "^0.2.1",
