--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,11 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
+    "angular-bootstrap": "~0.12.1",
+    "angular-ui-router": "~0.2.13",
     "angular-moment": "~0.9.2",
-    "ui-router": "~0.2.13",
     "bootstrap": "~3.3.4",
     "moment": "~2.9.0",
-    "ui-bootstrap": "~0.12.1"
+    "jquery": "~2.1.3"
   }
 }
