--- a/bower.json
+++ b/bower.json
@@ -25,5 +25,8 @@
     "bootstrap": "~3.3.4",
     "moment": "~2.9.0",
     "jquery": "~2.1.3"
+  },
+  "resolutions": {
+    "angular": "~1.3.15"
   }
 }
