--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "angular-moment": "~0.9.2",
     "bootstrap": "~3.3.4",
     "moment": "~2.9.0",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "angular-i18n": "~1.3.15"
   },
   "resolutions": {
     "angular": "~1.3.15"
