--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "bootstrap": "~3.3.4",
     "moment": "~2.9.0",
     "jquery": "~2.1.3",
-    "angular-i18n": "~1.3.15"
+    "angular-i18n": "~1.3.15",
+    "angular-google-places-autocomplete": "~0.2.5"
   },
   "resolutions": {
     "angular": "~1.3.15"
