--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
     "moment": "~2.9.0",
     "jquery": "~2.1.3",
     "angular-i18n": "~1.3.15",
-    "angular-google-places-autocomplete": "~0.2.5"
+    "angular-google-places-autocomplete": "0.2.4"
   },
   "resolutions": {
     "angular": "~1.3.15"
