--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
     "winston": "^0.9.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-wiredep": "^2.0.0"
   }
 }
