--- a/bower.json
+++ b/bower.json
@@ -26,8 +26,8 @@
     "moment": "~2.9.0",
     "jquery": "~2.1.3",
     "angular-i18n": "~1.3.15",
-    "angular-google-places-autocomplete": "0.2.4",
-    "angular-ui-bootstrap-datetimepicker": "~0.11.2"
+    "angular-ui-bootstrap-datetimepicker": "~0.11.2",
+    "angular-google-places-autocomplete": "~0.2.6"
   },
   "resolutions": {
     "angular": "~1.3.15"
