--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "grunt --verbose"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -24,6 +25,11 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-wiredep": "^2.0.0"
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-wiredep": "^2.0.0",
+    "jshint": "^2.8.0"
   }
 }
