--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "jquery": "~2.1.3",
     "angular-i18n": "~1.3.15",
     "angular-ui-bootstrap-datetimepicker": "~0.11.2",
-    "angular-google-places-autocomplete": "~0.2.6"
+    "angular-google-places-autocomplete": "~0.2.6",
+    "angular-google-maps": "~2.1.2"
   },
   "resolutions": {
     "angular": "~1.3.15"
