--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "angular-i18n": "~1.3.15",
     "angular-ui-bootstrap-datetimepicker": "~0.11.2",
     "angular-google-places-autocomplete": "~0.2.6",
-    "angular-google-maps": "~2.1.2"
+    "angular-google-maps": "~2.1.2",
+    "angular-ui-calendar": "~1.0.0"
   },
   "resolutions": {
     "angular": "~1.3.15"
