--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: node_js
 node_js:
   - "0.10"
 before_script:
+  - sleep 15
   - npm install -g bower
   - bower install
+services:
+  - mongodb
