--- a/package.json
+++ b/package.json
@@ -29,7 +29,17 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-karma": "^0.11.1",
+    "grunt-protractor-runner": "^2.0.0",
+    "grunt-selenium-webdriver-phantom": "^1.0.4",
     "grunt-wiredep": "^2.0.0",
-    "jshint": "^2.8.0"
+    "jasmine": "^2.3.1",
+    "jasmine-core": "^2.3.4",
+    "jshint": "^2.8.0",
+    "karma": "^0.12.36",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "phantomjs": "^1.9.17",
+    "protractor": "^2.1.0"
   }
 }
