--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
-    "winston": "^0.9.0"
-  },
-  "devDependencies": {
+    "winston": "^0.9.0",
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
-    "grunt-cli": "^0.1.13",
+    "grunt-cli": "^0.1.13"
+  },
+  "devDependencies": {
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.2",
